--- a/GiftCards/src/main/resources/application.properties
+++ b/GiftCards/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=80
+server.port=8080
 spring.thymeleaf.cache=false
 
 # ===============================
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/coolcoupons
 
 # Username and secret
 spring.datasource.username=root
-#spring.datasource.password=root
+#spring.datasource.password=root@123
 spring.datasource.password=ir0nm@n007
 
 # Keep the connection alive if idle for a long time (needed in production)
